--- a/Lab005/app/src/main.scss
+++ b/Lab005/app/src/main.scss
@@ -1,3 +1,57 @@
 body {
-  background: lightblue;
+  box-sizing: border-box;
+}
+[contenteditable] {
+  outline: 0px solid transparent;
+}
+[data-placeholder]:empty:before {
+  content: attr(data-placeholder);
+  color: #888;
+  font-style: italic;
+}
+label {
+  font: 1rem "Fira Sans", sans-serif;
+}
+
+input {
+  margin: 0.4rem;
+}
+input:focus {
+  outline: none;
+}
+#newNote {
+  width: 15rem;
+  height: 10rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding-top: 20px;
+  font: 1rem "Fira Sans", sans-serif;
+  div {
+    margin-top: 6px;
+    input {
+      border: 0;
+      padding: 3px;
+      padding-left: 15px;
+    }
+    span {
+      display: inline-block;
+      min-height: 50px;
+      width: 100%;
+      padding: 3px;
+      padding-left: 15px;
+    }
+    span:hover {
+      cursor: text;
+    }
+  }
+  button {
+    background-color: #17a2b8;
+    color: white;
+    border: 0;
+    border-radius: 20px;
+    margin-left: 15px;
+    padding: 6px;
+  }
+}
+.notes {
+  margin-top: 50px;
 }
